<resources>
    <string name="app_name">OkSocket Demo</string>
    <string name="simple_demo">Simple Demo</string>
    <string name="complex_demo">Complex Demo</string>
    <string name="server_admin">Echo Server Admin</string>
    <string name="local_device_ip_prefix">Local device IP: %1$s</string>
    <string name="local_ip_unavailable">No active IPv4 address</string>
    <string name="copy_ip">Copy IP</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="server_start_default">Start local server on 8080</string>
    <string name="server_start">Start local server on %1$d</string>
    <string name="server_stop">Stop local server on %1$d</string>
    <string name="send_label">Sending</string>
    <string name="receive_label">Receiving</string>
    <string name="hint_ip">IP address</string>
    <string name="hint_port">Port</string>
    <string name="default_ip">104.238.184.237</string>
    <string name="default_port">8080</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="clear_log">Clear log</string>
    <string name="send_hint">Enter text to send</string>
    <string name="send">Send</string>
    <string name="unconnected">Client is not connected</string>
    <string name="reconnect_toggle_label">Reconnect automatically after connection loss</string>
    <string name="redirect">Redirect</string>
    <string name="hint_pulse_frequency">Pulse frequency in milliseconds</string>
    <string name="set_pulse_frequency">Set pulse frequency</string>
    <string name="manual_pulse">Send manual pulse</string>
    <string name="restart">Restart</string>
    <string name="kick_offline">Kick offline</string>
    <string name="admin_login_title">Admin Login</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="admin_password">Admin password</string>
    <string name="admin_password_hint">Enter admin password</string>
    <string name="kick_offline_title">Kick Offline</string>
    <string name="kick_offline_target">Client tag</string>
    <string name="kick_offline_target_hint">Client identifier</string>
    <string name="confirm_action">Run</string>
    <string name="connect_first">Connect first</string>
    <string name="log_placeholder">--</string>
    <string name="invalid_pulse_frequency">Invalid pulse frequency</string>
</resources>
